# backend/src/main/kotlin/com/example/todolist/controller/TaskController.kt
@@ -1,7 +1,6 @@
 package com.example.todolist.controller
 
 import arrow.core.flatMap
-import com.example.todolist.model.Task
 import com.example.todolist.model.TaskError
 import com.example.todolist.service.TaskService
 import com.example.todolist.service.util.Validation
@@ -20,6 +19,8 @@ class TaskController {
     @Autowired
     private lateinit var taskService: TaskService
 
+    private val json = Json { encodeDefaults = true }
+
     @GetMapping("/v1/tasks", produces = [MediaType.APPLICATION_JSON_VALUE])
     fun getTasks(): ResponseEntity<String> {
         return taskService.getTasks().fold(
@@ -27,7 +28,7 @@ class TaskController {
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
@@ -39,7 +40,7 @@ class TaskController {
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
@@ -51,27 +52,29 @@ class TaskController {
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
 
-    @PutMapping("/v1/tasks/{id}/redo", produces = [MediaType.APPLICATION_JSON_VALUE])
-    fun redoTask(@PathVariable id: String): ResponseEntity<String> {
-        return taskService.redoTask(id).fold(
+    @PutMapping("/v1/tasks/{id}/reopen", produces = [MediaType.APPLICATION_JSON_VALUE])
+    fun reopenTask(@PathVariable id: String): ResponseEntity<String> {
+        return taskService.reopenTask(id).fold(
             ifLeft = { err ->
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
 
     @PostMapping("/v1/tasks", produces = [MediaType.APPLICATION_JSON_VALUE])
-    fun createTask(@RequestBody task: Task): ResponseEntity<String> {
-        return Validation.checkTaskReqBody(task).flatMap {
-            taskService.createTask(it)
+    fun createTask(@RequestBody taskJson: String): ResponseEntity<String> {
+        return Validation.checkDecodeJson(taskJson).flatMap {
+            Validation.checkTaskReqBody(it).flatMap { task ->
+                taskService.createTask(task)
+            }
         }.fold(
             ifLeft = { err ->
                 TaskError.toResponse(err)
@@ -83,15 +86,17 @@ class TaskController {
     }
 
     @PutMapping("/v1/tasks/{id}", produces = [MediaType.APPLICATION_JSON_VALUE])
-    fun updateTask(@PathVariable id: String, @RequestBody task: Task): ResponseEntity<String> {
-        return Validation.checkTaskReqBody(task).flatMap{
-            taskService.updateTask(id, it)
+    fun updateTask(@PathVariable id: String, @RequestBody taskJson: String): ResponseEntity<String> {
+        return Validation.checkDecodeJson(taskJson).flatMap {
+            Validation.checkTaskReqBody(it).flatMap { task ->
+                taskService.updateTask(id, task)
+            }
         }.fold(
             ifLeft = { err ->
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
@@ -103,7 +108,7 @@ class TaskController {
                 TaskError.toResponse(err)
             },
             ifRight = {
-                ResponseEntity.ok(Json.encodeToString(it))
+                ResponseEntity.ok(json.encodeToString(it))
             }
         )
     }
